# CLEVER

./: .env.example  .gitignore  CLAUDE.md  README.md  environment.yaml  improvements.md  output.txt  pyproject.toml  pytest.ini  requirements.txt  slurm-42251424.out
baseline_faiss/: baseline.py
configs/: eviction.yaml  eviction_sweep.yaml  index_benchmark.yaml  routing.yaml
embeddings/: miniLM_embeddings.py  requirements.txt
notebooks/: Untitled.ipynb  preprocess.ipynb  try_embeddings.ipynb  workload_characterization.ipynb  workload_characterization_COMPLETE.ipynb
notebooks/.ipynb_checkpoints/: cosine_vs_faiss-checkpoint.ipynb  workload_characterization-checkpoint.ipynb
results/benchmarks/: index_benchmark_100k.json  index_benchmark_10k.json  index_benchmark_500k.json  index_benchmark_50k.json  index_benchmark_full.json
results/characterization/: clustering_stats.json  redundancy_stats.json
results/eviction/: eviction_results.json
results/eviction_sweep/: sweep_results.json
results/routing/: index_comparison.json  (+2 more)
scripts/: 00_setup_environment.sh  01_download_dataset.py  01b_generate_synthetic_data.py  02_generate_embeddings.py  03_run_index_benchmark.py  04_visualize_data.py  05_visualize_benchmarks.py  06_run_routing_eval.py  07_visualize_routing.py  08_run_eviction.py  09_visualize_eviction.py  10_run_eviction_sweep.py  11_latency_sensitivity.py  12_visualize_sweep.py
slurm/: benchmark.sbatch  embed.sbatch  eviction.sbatch  routing.sbatch
src/: data_loader.py
tests/: test_eviction.py  test_p0_fixes.py  test_setup.py  test_sweep.py
(+30 files in other folders)
